<resources>
    <string name="app_name">NavigationProject</string>
    <string name="display_image_3">Display Image 3</string>
    <string name="display_image_2">Display Image 2</string>
    <string name="display_image_1">Display Image 1</string>
    <string name="image1">image1</string>
    <string name="image3">image3</string>
    <string name="image2">image2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="imageselected">Image Selected</string>
    <string name="chosen_image">chosen image</string>
    <string name="title_goes_here">Title Goes Here</string>
</resources>